@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-python -X pycache_prefix=./cache -m test.any atari
+python -X pycache_prefix=./cache -m test.any
